--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,9 @@ target 'Instagram' do
     :hermes_enabled => false
   )
 
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
+  pod 'Permission-PhotoLibraryAddOnly', :path => "#{permissions_path}/PhotoLibraryAddOnly"
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'InstagramTests' do
