--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.23.0",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-actions-sheet": "^0.5.8",
+    "react-native-app-auth": "^6.4.0",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-flipper": "^0.119.0",
